WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97404
REGRESSION (
r129211
-
r129218
): http/tests/loading/redirect-with-no-location-crash.html failing on GTK Linux 64-bit Release WK2 (Tests)
https://bugs.webkit.org/show_bug.cgi?id=97404
Summary
REGRESSION (r129211-r129218): http/tests/loading/redirect-with-no-location-cr...
Zan Dobersek
Reported
2012-09-22 23:22:14 PDT
The following test started failing on GTK Linux 64-bit Release WK2 (Tests) between
r129212
and
r129218
(inclusive): http/tests/loading/redirect-with-no-location-crash.html
http://trac.webkit.org/log/trunk?rev=129218&stop_rev=129212&limit=8
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20WK2%20(Tests)/r129211%20(2154)/results.html
passed
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20WK2%20(Tests)/r129218%20(2156)/results.html
failed The failure is actually a progression - DumpRenderTree should be updated to dump the 'didReceiveTitle' resource load callback as well, after that the baseline for this test, located in platform/gtk/http/tests/loading, can be removed. Hopefully some other tests might start passing as well.
Attachments
Patch
(4.29 KB, patch)
2012-09-23 22:24 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2012-09-23 22:24:16 PDT
Created
attachment 165311
[details]
Patch
Zan Dobersek
Comment 2
2012-09-24 07:52:40 PDT
Comment on
attachment 165311
[details]
Patch Clearing flags on attachment: 165311 Committed
r129366
: <
http://trac.webkit.org/changeset/129366
>
Zan Dobersek
Comment 3
2012-09-24 07:52:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug