REGRESSION (r129211-r129218): http/tests/loading/redirect-with-no-location-crash.html failing on GTK Linux 64-bit Release WK2 (Tests) https://bugs.webkit.org/show_bug.cgi?id=97404

Reviewed by Philippe Normand.

Tools:

Print out the 'didReceiveTitle' information when dumping frame load callbacks.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(webViewTitleChanged):

LayoutTests:

Remove WebKit2-specific failure expectation and GTK-specific baseline for the test in title.

* platform/gtk-wk2/TestExpectations:
* platform/gtk/http/tests/loading/redirect-with-no-location-crash-expected.txt: Removed.


Canonical link: https://commits.webkit.org/115395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129366 268f45cc-cd09-0410-ab3c-d52691b4dbfc