Tools/DumpRenderTree/gtk/DumpRenderTree.cpp
@@ -943,6 +943,11 @@ static gboolean webViewScriptConfirm(WebKitWebView* view, WebKitWebFrame* frame,
 
 static void webViewTitleChanged(WebKitWebView* view, WebKitWebFrame* frame, const gchar* title, gpointer data)
 {
+    if (gTestRunner->dumpFrameLoadCallbacks() && !done) {
+        GOwnPtr<char> frameName(getFrameNameSuitableForTestResult(view, frame));
+        printf("%s - didReceiveTitle: %s\n", frameName.get(), title ? title : "");
+    }
+
     if (gTestRunner->dumpTitleChanges() && !done)
         printf("TITLE CHANGED: '%s'\n", title ? title : "");
 }
